Added new pictures

--- a/gallery.html
+++ b/gallery.html
@@ -46,6 +46,9 @@
 	<br>
 	<!--Image that is being viewed-->
 	<div class="overlay-content">
+		<div class="title">
+			<p id="viewerImageTitle">Sample</p>
+		</div>
 		<img id="viewedImage" src="">
 	</div>
 </div>
@@ -92,7 +95,7 @@
 				<div class="title">
 					<p>Kitty in Trouble</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/kittyInTrouble.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/kittyInTrouble.jpg', 'Kitty in Trouble')">
 					<img src="resources/thumbnails/kittyInTrouble_t.jpg" alt="Kitty in Trouble" width="230" height="230">
 				</a>
 				<div class="description">
@@ -102,13 +105,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Romeo and Juliet</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/romeoAndJuliet.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/romeoAndJuliet.jpg', 'Romeo and Juliet')">
 					<img src="resources/thumbnails/romeoAndJuliet_t.jpg" alt="Romeo and Juliet" width="230" height="230">
 				</a>
 				<div class="description">
@@ -118,13 +122,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>A Good Lesson</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/aGoodLesson.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/aGoodLesson.jpg', 'A Good Lesson')">
 					<img src="resources/thumbnails/aGoodLesson_t.jpg" alt="A Good Lesson" width="230" height="230">
 				</a>
 				<div class="description">
@@ -134,13 +139,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Constitution</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/constitution.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/constitution.jpg', 'Constitution')">
 					<img src="resources/thumbnails/constitution_t.jpg" alt="Constitution" width="230" height="230">
 				</a>
 				<div class="description">
@@ -150,13 +156,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Happy Feet</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/happyFeet.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/happyFeet.jpg', 'Happy Feet')">
 					<img src="resources/thumbnails/happyFeet_t.jpg" alt="Happy Feet" width="230" height="230">
 				</a>
 				<div class="description">
@@ -166,13 +173,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Meet My Main Squeeze</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/meetMyMainSqueeze.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/meetMyMainSqueeze.jpg', 'Meet My Main Squeeze')">
 					<img src="resources/thumbnails/meetMyMainSqueeze_t.jpg" alt="Meet My Main Squeeze" width="230" height="230">
 				</a>
 				<div class="description">
@@ -182,13 +190,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="penInk all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Myrick & Estelle House</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/myrickEstelleHouse.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/myrickEstelleHouse.jpg', 'Myrick & Estelle House')">
 					<img src="resources/thumbnails/myrickEstelleHouse_t.jpg" alt="Myrick and Estelle House" width="230" height="230">
 				</a>
 				<div class="description">
@@ -198,13 +207,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="penInk all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Keen Home</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/keenHome.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/keenHome.jpg', 'Keen Home')">
 					<img src="resources/thumbnails/keenHome_t.jpg" alt="Keen Home" width="230" height="230">
 				</a>
 				<div class="description">
@@ -214,13 +224,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="penInk all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Cassem Home</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/cassemHome.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/cassemHome.jpg', 'Cassem Home')">
 					<img src="resources/thumbnails/cassemHome_t.jpg" alt="Cassem Home" width="230" height="230">
 				</a>
 				<div class="description">
@@ -230,13 +241,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Oregon Lake</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/oregonLake.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/oregonLake.jpg', 'Oregon Lake')">
 					<img src="resources/thumbnails/oregonLake_t.jpg" alt="Oregon Lake" width="230" height="230">
 				</a>
 				<div class="description">
@@ -246,13 +258,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Justin</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/justin.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/justin.jpg', 'Justin')">
 					<img src="resources/thumbnails/justin_t.jpg" alt="Justin" width="230" height="230">
 				</a>
 				<div class="description">
@@ -262,13 +275,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Tyler Reed</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/tylerReed.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/tylerReed.jpg', 'Tyler Reed')">
 					<img src="resources/thumbnails/tylerReed_t.jpg" alt="Tyler Reed" width="230" height="230">
 				</a>
 				<div class="description">
@@ -278,13 +292,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Comforting</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/comforting.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/comforting.jpg', 'Comforting')">
 					<img src="resources/thumbnails/comforting_t.jpg" alt="Comforting" width="230" height="230">
 				</a>
 				<div class="description">
@@ -294,13 +309,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Girl in Flower Garden</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/girlInFlowerGarden.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/girlInFlowerGarden.jpg', 'Girl in Flower Garden')">
 					<img src="resources/thumbnails/girlInFlowerGarden_t.jpg" alt="Girl in Flower Garden" width="230" height="230">
 				</a>
 				<div class="description">
@@ -310,13 +326,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Cat Newberry</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/catNewberry.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/catNewberry.jpg', 'Cat Newberry')">
 					<img src="resources/thumbnails/catNewberry_t.jpg" alt="Cat Newberry" width="230" height="230">
 				</a>
 				<div class="description">
@@ -326,13 +343,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Lambs</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/lambs.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/lambs.jpg', 'Lambs')">
 					<img src="resources/thumbnails/lambs_t.jpg" alt="Lambs" width="230" height="230">
 				</a>
 				<div class="description">
@@ -342,13 +360,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Tiger</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/tiger.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/tiger.jpg', 'Tiger')">
 					<img src="resources/thumbnails/tiger_t.jpg" alt="Tiger" width="230" height="230">
 				</a>
 				<div class="description">
@@ -358,13 +377,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Three Snow Leopards</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/threeSnowLeopards.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/threeSnowLeopards.jpg', 'Three Snow Leopards')">
 					<img src="resources/thumbnails/threeSnowLeopards_t.jpg" alt="Three Snow Leopards" width="230" height="230">
 				</a>
 				<div class="description">
@@ -374,13 +394,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Yellow Rose</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/yellowRose.png')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/yellowRose.png', 'Yellow Rose')">
 					<img src="resources/thumbnails/yellowRose_t.jpg" alt="Yellow Rose" width="230" height="230">
 				</a>
 				<div class="description">
@@ -390,13 +411,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Jim Leisner</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/jimLeisner.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/jimLeisner.jpg', 'Jim Leisner')">
 					<img src="resources/thumbnails/jimLeisner_t.jpg" alt="Jim Leisner" width="230" height="230">
 				</a>
 				<div class="description">
@@ -406,13 +428,14 @@
 			</div>
 		</div>
 	</div> 
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Robert Tranquada, M.D.</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/robertTranquada.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/robertTranquada.jpg', 'Robert Tranquada, M.D.')">
 					<img src="resources/thumbnails/robertTranquada_t.jpg" alt="Robert Tranquada, M.D." width="230" height="230">
 				</a>
 				<div class="description">
@@ -422,13 +445,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Francis McBeth, Ph.D.</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/francisMcbeth.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/francisMcbeth.jpg', 'Francis McBeth, Ph.D.')">
 					<img src="resources/thumbnails/francisMcbeth_t.jpg" alt="Francis McBeth, Ph.D." width="230" height="230">
 				</a>
 				<div class="description">
@@ -437,14 +461,15 @@
 				</div>
 			</div>
 		</div>
-	</div>    
+	</div>  
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Jack Mossler, M.D.</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/jackMossler.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/jackMossler.jpg', 'Jack Mossler, M.D.')">
 					<img src="resources/thumbnails/jackMossler_t.jpg" alt="Jack Mossler, M.D." width="230" height="230">
 				</a>
 				<div class="description">
@@ -454,13 +479,14 @@
 			</div>
 		</div>
 	</div>   
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Gustavo Carranza (Younger)</p>
+					<p>Gustavo Carranza</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/gustavoCarranzaYounger.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/gustavoCarranzaYounger.jpg', 'Gustavo Carranza (Younger)')">
 					<img src="resources/thumbnails/gustavoCarranzaYounger_t.jpg" alt="Gustavo Carranza" width="230" height="230">
 				</a>
 				<div class="description">
@@ -470,13 +496,14 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Gustavo Carranza (Older)</p>
+					<p>Gustavo Carranza</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/gustavoCarranzaOlder.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/gustavoCarranzaOlder.jpg', 'Gustavo Carranza (Older)')">
 					<img src="resources/thumbnails/gustavoCarranzaOlder_t.jpg" alt="Gustavo Carranza" width="230" height="230">
 				</a>
 				<div class="description">
@@ -486,61 +513,99 @@
 			</div>
 		</div>
 	</div>
-	<div class="oil all">
+
+	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Howard Swan, Ph.D.</p>
+					<p>Igor Stravinsky</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/howardSwan,Ph.d..jpg')">
-					<img src="resources/thumbnails/howardSwan,Ph.d._t.jpg" alt="Howard Swan, Ph.D." width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/igorStravinsky.jpg', 'Igor Stravinsky')">
+					<img src="resources/thumbnails/igorStravinsky_t.jpg" alt="Igor Stravinsky" width="230" height="230">
 				</a>
 				<div class="description">
-					<p>Oil</p>
-					<p>22" &times; 24"</p>
+					<p>Pencil</p>
+					<p>9.5" &times; 12.4"</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="oil all">
+	
+	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Jester Hairston</p>
+					<p>Elliott Carter</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/jesterHairston.jpg')">
-					<img src="resources/thumbnails/jesterHairston_t.jpg" alt="Jester Hairston" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/elliottCarter.jpg', 'Elliott Carter')">
+					<img src="resources/thumbnails/elliottCarter_t.jpg" alt="Elliott Carter" width="230" height="230">
 				</a>
 				<div class="description">
-					<p>Oil</p>
-					<p>22" &times; 24"</p>
+					<p>Pencil</p>
+					<p>9.5" &times; 12.4"</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="oil all">
+
+	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Jana Jobes</p>
+					<p>Frank Zappa</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/janaJobes.jpg')">
-					<img src="resources/thumbnails/janaJobes_t.jpg" alt="Jana Jobes" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/frankZappa.jpg', 'Frank Zappa')">
+					<img src="resources/thumbnails/frankZappa_t.jpg" alt="Frank Zappa" width="230" height="230">
 				</a>
 				<div class="description">
-					<p>Oil</p>
-					<p>20" &times; 24"</p>
+					<p>Pencil</p>
+					<p>9.5" &times; 12.4"</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<div class="pencil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Charles Ives</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/charlesIves.jpg', 'Charles Ives (First Portrait)')">
+					<img src="resources/thumbnails/charlesIves_t.jpg" alt="Charles Ives (First Portrait)" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pencil</p>
+					<p>9.5" &times; 12.4"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="pencil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Charles Ives</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/charlesIves2.jpg', 'Charles Ives (Second Portrait)')">
+					<img src="resources/thumbnails/charlesIves2_t.jpg" alt="Charles Ives (Second Portrait)" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pencil</p>
+					<p>9.5" &times; 12.4"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
 					<p>Jim Trebilcox</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/jimTrebilcox.jpg')">
+				<a title="Click to view" onclick="openViewer('resources/pictures/jimTrebilcox.jpg', 'Jim Trebilcox (Jesus Christ Super Star, FCLO)')">
 					<img src="resources/thumbnails/jimTrebilcox_t.jpg" alt="Jim Trebilcox" width="230" height="230">
 				</a>
 				<div class="description">
@@ -550,16 +615,58 @@
 			</div>
 		</div>
 	</div>
-	
-	<!--END DRAWINGS-->
 
-	<div class="responsive">
-		<div class="panel">
-			<div class="description">
-				<p>Click <a href="#">here</a> to get back to top</p>
+	<div class="penInk all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Little League</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/littleLeague1.jpg', 'Little League (Batting)')">
+					<img src="resources/thumbnails/littleLeague1_t.jpg" alt="Little League (Batting)" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pen & Ink</p>
+					<p>12" &times; 16"</p>
+				</div>
 			</div>
 		</div>
 	</div>
+	
+	<div class="penInk all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Little League</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/littleLeague2.jpg', 'Little League (Grounding)')">
+					<img src="resources/thumbnails/littleLeague2_t.jpg" alt="Little League (Grounding)" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pen & Ink</p>
+					<p>12" &times; 16"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="penInk all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Little League</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/littleLeague3.jpg', 'Little League (Running)')">
+					<img src="resources/thumbnails/littleLeague3_t.jpg" alt="Little League (Running)" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pen & Ink</p>
+					<p>12" &times; 16"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
 </div>
 <script type="text/javascript" src="resources/js/menu.js"></script>
