--- a/gallery.html
+++ b/gallery.html
@@ -514,6 +514,40 @@
 		</div>
 	</div>
 
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Benton Minor</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/bentonMinor.jpg', 'Benton Minor')">
+					<img src="resources/thumbnails/bentonMinor_t.jpg" alt="Benton Minor" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Howard Swan, Ph.D.</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/howardSwan.jpg', 'Howard Swan, Ph.D.')">
+					<img src="resources/thumbnails/howardSwan_t.jpg" alt="Howard Swan" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
@@ -666,6 +700,262 @@
 			</div>
 		</div>
 	</div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Images of Yesteryear</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/imagesOfYesteryear.jpg', 'Images of Yesteryear')">
+                    <img src="resources/thumbnails/imagesOfYesteryear_t.jpg" alt="Images of Yesteryear" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 30"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Midnight Summers...</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/midnightSummersDream.jpg', 'Midnight Summers Dream')">
+                    <img src="resources/thumbnails/midnightSummersDream_t.jpg" alt="Midnight Summers Dream" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Cardinals</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/cardinals1.jpg', 'Cardinals 1')">
+                    <img src="resources/thumbnails/cardinals1_t.jpg" alt="Cardinals 1" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>10" &times; 8"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Cardinals</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/cardinals2.jpg', 'Cardinals 2')">
+                    <img src="resources/thumbnails/cardinals2_t.jpg" alt="Cardinals 2" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>8" &times; 10"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Hobie-Jack</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/hobieJack.jpg', 'Hobie-Jack')">
+                    <img src="resources/thumbnails/hobieJack_t.jpg" alt="Hobie-Jack" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 14"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Spring Fantasy</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/springFantasy.jpg', 'Spring Fantasy')">
+                    <img src="resources/thumbnails/springFantasy_t.jpg" alt="Spring Fantasy" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>34" &times; 30"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Poppies & Lupine</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/poppiesLupine.jpg', 'Poppies & Lupine')">
+                    <img src="resources/thumbnails/poppiesLupine_t.jpg" alt="Poppies & Lupine" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>16" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Stormy Cove</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/stormyCove.jpg', 'Stormy Cove')">
+                    <img src="resources/thumbnails/stormyCove_t.jpg" alt="Stormy Cove" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 30"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+	<div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Rocky California...</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/rockyCaliforniaCoastline.jpg', 'Rocky California Coastline')">
+                    <img src="resources/thumbnails/rockyCaliforniaCoastline_t.jpg" alt="Rocky California Coastline" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>49" &times; 25"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Thomas Kinkade</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/thomasKinkade.jpg', 'Thomas Kinkade, Personalized')">
+                    <img src="resources/thumbnails/thomasKinkade_t.jpg" alt="Thomas Kinkade, Personalized" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>30" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Table Mountain</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/tableMountain.jpg', 'Table Mountain, South Africa')">
+                    <img src="resources/thumbnails/tableMountain_t.jpg" alt="Table Mountain, South Africa" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>30" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>McWay Falls</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/mcwayFalls.jpg', 'McWay Falls, California Coastline')">
+                    <img src="resources/thumbnails/mcwayFalls_t.jpg" alt="McWay Falls, California Coastline" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>36" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Misty Forest</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/mistyForest.jpg', 'Misty Forest')">
+                    <img src="resources/thumbnails/mistyForest_t.jpg" alt="Misty Forest" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>30" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>California Coastline</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/californiaCoastline.jpg', 'California Coastline')">
+                    <img src="resources/thumbnails/californiaCoastline_t.jpg" alt="California Coastline" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>12" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Sunrise Over Lake</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/sunriseOverLake.jpg', 'Sunrise Over Lake')">
+                    <img src="resources/thumbnails/sunriseOverLake_t.jpg" alt="Sunrise Over Lake" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>30" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 </div>
