Added craigh na dun

--- a/gallery.html
+++ b/gallery.html
@@ -957,6 +957,23 @@
         </div>
     </div>
 
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Craigh na dun</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/craighNaDun.jpg', 'Craigh na dun, Scotland')">
+                    <img src="resources/thumbnails/craighNaDun_t.jpg" alt="Craigh na dun, Scotland" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 16"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 </div>
 <script type="text/javascript" src="resources/js/menu.js"></script>
